# spacecraze2

./: .gitignore  .projectile  CMakeLists.txt  LICENSE  README.md  configure
cmake/: FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
include/glad/: glad.h
shaders/: font.frag  font.vert  laser.frag  player.fs  player.vs  sprite.frag  sprite.fs  sprite.vert  sprite.vs
src/: aabb.h  asset_manager.h  audio.cc  audio.h  common.cc  common.h  constants.h  entities.cc  entities.h  font.cc  font.h  game.cc  game.h  game_mode.h  game_objects.h  glad.c  main.cc  mesh.cc  mesh.h  opengl.cc  opengl.h  platform.cc  platform.h  play_mode.cc  play_mode.h  powerup.h  renderer.cc  renderer.h  shader.h
